# tiny-mind

./: README.md  pyproject.toml
examples/: basic_usage.py
tests/: __init__.py  test_integration.py
tinymind/: __init__.py  agent.py  cli.py  config.py
tinymind/cortex/: __init__.py  base.py  loop.py  rl.py  visual.py
tinymind/envs/: __init__.py  hunting_env.py
